--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "express": "^4.17.1",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "babel-loader": "^8.0.6"
   }
 }
