--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server/index.js",
     "build-prod": "webpack --config webpack.prod.js",
-    "build-dev": "webpack-dev-server --config webpack.dev.js --open",
+    "build-dev": "webpack-dev-server --config webpack.dev.js --open ",
     "_comment1": "remove dist directory every time this command is run: rm -rf dist && webpack-dev-server --config webpack.dev.js --open",
     "_comment2": "no hot reloading without dev-server: build-dev: webpack --config webpack.dev.js --watch --info-verbosity verbose",
-    "_comment3": "build-dev is using CleanWebpackPlugin setup as a plugin in webpack.dev.js"
+    "_comment3": "build-dev is using CleanWebpackPlugin setup as a plugin in webpack.dev.js",
+    "_comment4": "plug-in new BundleAnalyzerPlugin() opens a separate browser tab and shows the usage analysis of the different packages in the app"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,7 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "webpack-bundle-analyzer": "^3.5.1",
     "webpack-dev-server": "^3.8.1"
   }
 }
